// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unbound Action can be called 1`] = `
[
  {
    "keys": {},
    "path": "unboundAction",
  },
]
`;

exports[`Unbound Action can be called 2`] = `"This is my action response"`;

exports[`Unbound Action can call the base interface 1`] = `
[
  {
    "keys": {},
    "path": "unboundActionThatFetchData",
  },
]
`;

exports[`Unbound Action can call the base interface 2`] = `
[
  {
    "HasActiveEntity": true,
    "HasDraftEntity": false,
    "ID": 2,
    "IsActiveEntity": true,
    "TitleProperty": "This is my Title",
  },
]
`;

exports[`Unbound Action can call the base interface for an incorrect entity    1`] = `
[
  {
    "keys": {},
    "path": "unboundActionThatFetchDataOnUnknownEntity",
  },
]
`;
